--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       const user = document.getElementById("username").value;
       const pass = document.getElementById("password").value;
 
-      if (user === "Kilaa Wangcap" && pass === "Kilaa Wangcap") {
+      if (user === "Kyowo Base" && pass === "Kyowo Base") {
         document.getElementById("loginBox").style.display = "none";
         document.getElementById("mainContent").classList.remove("hidden");
         document.getElementById("logoutBtn").style.display = "inline-block";
